fixed the model rendering AAAAAAAAAAAAA this achieves a balance between a model being a item with a custom model, and a armor suit at the same time!!! which is stupid. but that's how ink tank's rendering worked in 1.18 the reasoning for the textures being moved to the item folder is because the item atlas model thingy doesn't load the models folder :( but i also needed the model to render as a suit so i injected the inktankfeature:tm: that gives the appropriate textures to it + handle arm rotating for the ArmoredInkTankModel which was way more complex that the other tanks >:(